--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         //for spinner
     </script>
 </head>
-<link rel="stylesheet" href="styles/commandcenter.css">
+<link rel="stylesheet" href="scripts/styles/todoapp.css">
 
 <body>
     <div class="container">
         <div class="inner-container">
-            <div class="title">MY TO DO LIST</div>
+
         </div>
     </div>
     <script data-main="scripts/ToDoAppMain.js" type="text/javascript" src="node_modules/requirejs/require.js"></script>
